# jarvis

./: .gitignore  README.md  build_installer.bat  config.default.yaml  config.yaml  update_installer.bat
.cursor/rules/: jarvis-installer-version.mdc
backend/: pyproject.toml  requirements.txt
backend/jarvis/: __init__.py  audio.py  bootstrap.py  config.py  main.py  memory.py  openai_compat.py  orchestrator.py  patches.py  prompt_builder.py  server.py  speaker_id.py  stt.py  system_utils.py  tool_dispatcher.py  tts.py  user_skills.py  utils.py  vad.py  wakeword.py
backend/jarvis/skills/: __init__.py  base.py  desktop.py  info.py  media.py  system.py  terminal.py  web.py
frontend/: CMakeLists.txt
frontend/build-debug-hud/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  imgui.vcxproj  imgui.vcxproj.filters  jarvis_debug_hud.vcxproj  jarvis_debug_hud.vcxproj.filters  jarvis_hud.slnx  jarvis_hud.vcxproj
frontend/build-debug-hud/Debug/: hud_layout.json  jarvis-debug.exp  jarvis-debug.lib
frontend/build-debug-hud/imgui.dir/Debug/: imgui.lib.recipe
frontend/build-debug-hud/imgui.dir/Debug/imgui.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
frontend/build-debug-hud/jarvis_debug_hud.dir/Debug/: jarvis-debug.exe.recipe
frontend/build-debug-hud/jarvis_debug_hud.dir/Debug/jarvis_debug_hud.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
frontend/build-debug-hud/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
frontend/src/: BackendLauncher.cpp  BackendLauncher.h  Hud.cpp  Hud.h  State.h  WsClient.cpp  WsClient.h  main.cpp
installer/: jarvis.iss
scripts/: build_installer.ps1  download_models.py  package_windows.ps1  run_debug_hud.ps1  setup_runtime.ps1  test_elevenlabs_live.py  test_elevenlabs_stream.py  test_orchestrator.py  test_tts_failover.py  ws_settings_test.py  ws_test.py
